Test Lead for all tests is not working, opportunity Test neither because of lazy exception error

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,6 +8,7 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
+      #enable_lazy_load_no_trans: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
