CRMdashboard, maindashboard, leadRepo, LeadService Lead now can be created, searched by id, show specific id on screen and show all leads on screen

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       #enable_lazy_load_no_trans: true
     properties:
       hibernate:
